--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "homepage": "https://github.com/alexanderclayton/BattleTechClanAPI#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mssql": "^10.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mssql": "^9.1.5",
     "@types/node": "^20.12.7",
